Update testing guide and server setup scripts for Hytale integration
Refactor build configurations to use Java 19 and replace virtual threads with cached thread pools. Exclude stub classes from the final JAR to prevent runtime conflicts. Update testing documentation and scripts to reflect Hytale server setup and integrate Rubidium as an early plugin. Add Hytale plugin stubs and a manifest file.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 0ade85cf-4642-4b72-93ac-c7ff3426fa3f
Replit-Commit-Checkpoint-Type: intermediate_checkpoint
Replit-Commit-Event-Id: 2505c060-6b35-4ee1-becb-83fb7f94266e
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/b46ba5a5-086e-49a5-a535-37f214b2b3c5/0ade85cf-4642-4b72-93ac-c7ff3426fa3f/wQwtoTf
Replit-Helium-Checkpoint-Created: true